--- a/1.html
+++ b/1.html
@@ -11,6 +11,27 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <h2>HTML</h2><p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_black" title="HTML5 speicification">Hypertext markup language (HTMl)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a wev server or from local storage and render them into multimedia web pages. HTML descrives the strucrture of a web page semanticallyand originallt included cues for the appearance of the documment.<img src="coding.jpg" width="100%"></p><p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With html constructs, images and other objects, such as interactive forms, may ve emvedded into the rendered page. It provides a means to create suructured documents by denoting strustural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
+  <h2>HTML</h2><p><iframe width="560" height="315" src="https://www.youtube.com/embed/n1wvs7xuUYk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><p><p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_black" title="HTML5 speicification">Hypertext markup language (HTMl)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a wev server or from local storage and render them into multimedia web pages. HTML descrives the strucrture of a web page semanticallyand originallt included cues for the appearance of the documment.<img src="coding.jpg" width="100%"></p><p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With html constructs, images and other objects, such as interactive forms, may ve emvedded into the rendered page. It provides a means to create suructured documents by denoting strustural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
+  <p>
+    <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-rxy00vosdh.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
 </body>
 </html>
