--- a/1.html
+++ b/1.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
   </ol>
   <h2>HTML</h2><p><iframe width="560" height="315" src="https://www.youtube.com/embed/n1wvs7xuUYk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><p><p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_black" title="HTML5 speicification">Hypertext markup language (HTMl)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a wev server or from local storage and render them into multimedia web pages. HTML descrives the strucrture of a web page semanticallyand originallt included cues for the appearance of the documment.<img src="coding.jpg" width="100%"></p><p style="margin-top:40px;">HTML elements are the building blocks of HTML pages. With html constructs, images and other objects, such as interactive forms, may ve emvedded into the rendered page. It provides a means to create suructured documents by denoting strustural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
   <p>
